# XYPlotter

./: .gitignore  .gitmodules  LICENSE  README.md
code/: CMakeLists.txt  README.md  start_openocd.sh  xyplotter.cpp
code/lib/: CMakeLists.txt  gcode.cpp  gcode.h  gcode_parser.cpp  gcode_parser.h  holder.h  line.cpp  line.h  machine.h  mg90s.cpp  mg90s.h  plotter.cpp  plotter.h  plotter_gcodes.cpp  tmc2209.cpp  tmc2209.h
code/test/: CMakeLists.txt  test.h  test_gcode.cpp  test_mg90s.cpp  test_tmc.cpp
code/util/: CMakeLists.txt  plot.py  servo_calibrator.cpp  servo_calibrator.py
code/util/gcode/: adela.gcode  animals.gcode  babi.gcode  babicka.gcode  cvut.gcode  cvut2.gcode  deda.gcode  flower.gcode  jiri.gcode  love.gcode  lubos.gcode  maj.gcode  ondra.gcode  output.gcode  output1.gcode  rabbit.gcode  rozalie.gcode  snbsnts.gcode  snowbosantus.gcode  strasak.gcode  test.gcode  xyplotter.gcode  zemanovi.gcode
stl/: electronics_enclosure_bottom.stl  motor_holder.stl  pen_holder_frame.stl  pen_holder_holder.stl  spacer.stl  x_axis_cariage.stl  x_axis_end_left.stl  x_axis_end_right.stl  y_axis_end.stl  y_carriage.stl
thesis/: README.md  main.typ  title_page.typ
